test/fail_compilation/fail335.d

void foo();
@property void foo(int);

void main()
{
    foo(1);
}
